[package]
name = "lvlshare"
version = "0.1.0"
authors = ["Spu7Nix <spu7nix@outlook.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

base64 = "0.12.0"
libflate = "0.1.27"
quick-xml = "0.17.2"
xorstream = "2.0.2"
crc32fast = "1.2.0"

sciter-rs = "*"

process_list = "0.2.1"






